# aoc-2021

./: justfile
_template/: Cargo.toml
_template/src/: main.rs
days/day-01/: Cargo.toml
days/day-01/src/: main.rs
days/day-02/: Cargo.toml
days/day-02/src/: main.rs
days/day-03/: Cargo.toml
days/day-03/src/: main.rs
days/day-04/: Cargo.toml
days/day-04/src/: main.rs
days/day-05/: Cargo.toml
days/day-05/src/: main.rs
days/day-06/: Cargo.toml
days/day-06/src/: main.rs
days/day-07/: Cargo.toml
days/day-07/src/: main.rs
days/day-08/: Cargo.toml
days/day-08/src/: main.rs
days/day-09/: Cargo.toml
days/day-09/src/: main.rs
days/day-10/: Cargo.toml
days/day-10/src/: main.rs
days/day-11/: Cargo.toml
days/day-11/src/: main.rs
days/day-12/: Cargo.toml
days/day-12/src/: main.rs
days/day-13/: Cargo.toml
days/day-13/src/: main.rs
days/day-14/: Cargo.toml
days/day-14/src/: main.rs
days/day-15/: Cargo.toml
days/day-15/src/: main.rs
days/day-16/: Cargo.toml
days/day-16/src/: main.rs
days/day-17/: Cargo.toml
days/day-17/src/: main.rs
