[package]
name = "day-15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
itertools = "0.10.1"
csv = "1.1"
serde = {version = "1", features = ["derive"]}
unicode-segmentation = "1.8.0"
pathfinding = "3.0.5"